# remote_backup

./: .gitignore  README.md  credentials.md
Client/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  client.conf  main.cpp
Common/: Message.cpp  Message.h  Parameters.h
Server/: CMakeLists.txt  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  auth.txt  main.cpp
Utilities/: Utilities.cpp  Utilities.h
